# claude-hackaton-security

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  README.md  docker-compose.yml  print_geo_areas_forca.py  pyproject.toml  visualize_areas_forca.py
Documentation/: frontend-data-fetching.md
backend/: Dockerfile
backend/config/: settings.py  urls.py
backend/ocorrencias/: admin.py  loaders.py  models.py  regions_logic.py  scoring.py  serializers.py  urls.py  views.py
backend/ocorrencias/migrations/: 0001_initial.py  0002_camera_diskdenuncia_fatorurbano.py  0003_areaforca.py  0004_ocorrencia_single_date.py
backend/tests/: test_area_snapshot.py  test_loaders.py  test_scoring.py  test_search.py
docs/: backend-handoff-acompanhamento.md  backend-handoff-regionlist.md  frontend-handoff-regionlist.md
frontend/: .dockerignore  Dockerfile  README.md  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/components/: MapView.tsx  Providers.tsx
frontend/components/compstat/: AvaliacaoView.tsx  CompStat.tsx  DiagnosticoView.tsx  FooterCta.tsx  PageHeader.tsx  RegionItem.tsx  RegionList.tsx  Toast.tsx  TopBar.tsx  WeekTabs.tsx
frontend/components/map/: AreasLayer.tsx  H3Layer.tsx  MapCanvas.tsx  OcorrenciasLayer.tsx  WeekBar.tsx  map-context.ts  use-ocorrencias.ts
frontend/hooks/: use-is-client.ts  use-selected-week.ts  use-viewport-url.ts
frontend/lib/: h3-grid.ts  iso-week.ts  map-config.ts
frontend/lib/api/: areas-forca.ts  ocorrencias.ts  regions.ts
frontend/lib/compstat/: regions.ts
(+7 files in other folders)
