[project]
name = "claude-hackaton-security"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "django-cors-headers>=4.4",
    "djangorestframework>=3.15",
    "djangorestframework-gis>=1.1",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.9",
    "pandas>=2.2",
    "psycopg[binary]>=3.2",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]
